$Header$
===============================================================

171	Luke Howard <lukeh@padl.com>

	* added ldap.conf stanza for AIX

170	Luke Howard <lukeh@padl.com>

	* use _nss_ldap_getrdnvalue() for determining canonical	
	  group name

169	Luke Howard <lukeh@padl.com>

	* fixed typo in ldap-service.c; prefix filters now
	  with _nss_ldap

168	Luke Howard <lukeh@padl.com>

	* initialize old_handler to SIG_DFL
	* incorporate Stephan Cremer's mapping patches,
	  a big thanks to Stephan for these!
	* use LDAP_OPT_NETWORK_TIMEOUT if available for
	  network connect timeout
	* removed hard-coded schema mapping for 
	  authPassword, NDS and MSSFU

167	Luke Howard <lukeh@padl.com>

	* support for new OpenLDAP rebind proc prototype
	* in rebind function, respect timeout
	* fix for PADL Release Control

166	Luke Howard <lukeh@padl.com>

	* corrected small typos 

165	Luke Howard <lukeh@padl.com>

	* posixMember is a distinguished name, don't pretend it
	  is a login name
	* cleaned up code referencing different member syntaxes

164	Luke Howard <lukeh@padl.com>

	* removed IDS_UID code, never worked properly

163	Luke Howard <lukeh@padl.com>

	* removed context_free function, usage confusing

162	Luke Howard <lukeh@padl.com>

	* in reconnect harness, do not treat entry not found
	  errors as requiring a reconnect

161	Luke Howard <lukeh@padl.com>

	* hopefully fixed use of synchronous searches in
	  _nss_ldap_getbyname()

160	Luke Howard <lukeh@padl.com>

	* patch from RedHat to check for DB3, override
	  install user/group optionally
	* use synchoronous searches for _nss_ldap_getbyname()
	* only set SSL options if we have values for those
	  options

159	Luke Howard <lukeh@padl.com>

	* make do_ssl_options() take a config parameter;
	  avoid segfault with SSL?

158	Luke Howard <lukeh@padl.com>

	* in the distinguished name to login cache (dn2uid)
	  make sure we use the AT(uid) macro for the uid 
	  attribute rather than the hard-coded value of "uid"